[package]
name = "tcp-ac-udp-rj"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
tcp-ac-udp-rj-common = { path = "../tcp-ac-udp-rj-common", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = "1"
env_logger = "0.11"

[[bin]]
name = "tcp-ac-udp-rj"
path = "src/main.rs"
